[gd_scene load_steps=3 format=3 uid="uid://d0bjmj7oachcm"]

[ext_resource type="Script" path="res://UI/ui_components/skill_view_lines/skill_view_container.gd" id="1_wv16d"]
[ext_resource type="Theme" uid="uid://22pl8ilt400b" path="res://UI/ui_components/upgrade_view_buttons/button_themes/add_button.tres" id="2_ny6ph"]

[node name="Skill_View_Container" type="HBoxContainer" groups=["ui_skill"]]
script = ExtResource("1_wv16d")

[node name="skill_title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Tooltip"
mouse_filter = 1
theme_override_font_sizes/font_size = 14
text = "Coding:"

[node name="skill_value" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 14
text = "0"

[node name="Add_Button" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_ny6ph")
disabled = true
text = "+"

[connection signal="pressed" from="Add_Button" to="." method="_on_add_button_pressed"]
